[package]
name = "schedule-ga-rust"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
version_check = "0.9.4"
num_cpus = "1.14.0"
serde = {version = "1.0", features = ["derive"]}
serde_derive = "1.0"
csv = "1.1"
chrono = {version = "0.4", features = ["serde"]}
